# sfem-dev

./: .gitignore  CMakeLists.txt  README.md  install.py
apps/: CMakeLists.txt
apps/cart-mesh/: CMakeLists.txt  cart-mesh.cpp
apps/io/: CMakeLists.txt  gmsh_to_sfem.cpp  sfem_to_vtk.cpp
examples/fem/elasticity_3d/: CMakeLists.txt  main.cpp
examples/fem/elasticity_3d/mesh/: cells
examples/fvm/simple/: CMakeLists.txt  main.cpp  simple.hpp
src/discretization/: CMakeLists.txt  coefficient.cpp  coefficient.hpp  field.cpp  field.hpp  function.cpp  function.hpp  sfem_discretization.hpp
src/discretization/fem/: CMakeLists.txt  cg_space.cpp  cg_space.hpp  coefficient.cpp  coefficient.hpp  dirichlet_bc.cpp  dirichlet_bc.hpp  fe_equation.cpp  fe_equation.hpp  fe_field.cpp  fe_field.hpp  fe_function.cpp  fe_function.hpp  fe_space.cpp  fe_space.hpp  sfem_fem.hpp
src/discretization/fem/elements/: CMakeLists.txt  fe.cpp  fe.hpp  fe_factory.cpp  fe_factory.hpp  fixed_order.hpp  fixed_order_hex.cpp  fixed_order_line.cpp  fixed_order_quad.cpp  fixed_order_tet.cpp  fixed_order_triangle.cpp  nodal_fe.cpp  nodal_fe.hpp  point.cpp  sfem_elements.hpp
src/discretization/fem/kernels/: CMakeLists.txt  diffusion.cpp  diffusion.hpp  linear_elasticity.cpp  linear_elasticity.hpp  mass.cpp  mass.hpp  pressure_load.cpp  pressure_load.hpp  sfem_fe_kernels.hpp
src/discretization/fem/quadrature/: CMakeLists.txt  gauss.cpp  gauss.hpp  quadrature.cpp  quadrature.hpp  sfem_quadrature.hpp  tetrahedron.cpp  tetrahedron.hpp  triangle.cpp  triangle.hpp
src/discretization/fem/utils/: CMakeLists.txt  assembly.cpp  assembly.hpp  dof_utils.cpp  dof_utils.hpp  la_utils.cpp  la_utils.hpp  post_utils.cpp  post_utils.hpp  sfem_fem_utils.hpp
src/discretization/fvm/: CMakeLists.txt  diffusion.cpp  diffusion.hpp  fv_bc.cpp  fv_bc.hpp  fv_coefficient.cpp  fv_coefficient.hpp  fv_equation.cpp  fv_equation.hpp  fv_field.cpp  fv_field.hpp  fv_function.cpp  fv_function.hpp  fv_geometry.cpp  fv_geometry.hpp  fv_gradient.cpp  fv_gradient.hpp  fv_source.cpp  fv_source.hpp  fv_space.cpp  fv_space.hpp  hyperbolic.cpp  hyperbolic.hpp  laplacian.cpp  laplacian.hpp  sfem_fvm.hpp
src/discretization/fvm/algorithms/: sfem_fvm_algorithms.hpp  simple.cpp  simple.hpp
src/discretization/fvm/hyperbolic/: euler.cpp  euler.hpp  flux_function.cpp  flux_function.hpp  numerical_flux.cpp  numerical_flux.hpp  sfem_hyperbolic.hpp
src/discretization/fvm/kernels/: CMakeLists.txt  convection.cpp  convection.hpp  diffusion.cpp  diffusion.hpp  laplacian.cpp  laplacian.hpp  sfem_fv_kernels.hpp  source.cpp  source.hpp  transient.cpp  transient.hpp
src/discretization/fvm/utils/: CMakeLists.txt  la_utils.cpp  la_utils.hpp  ode_utils.cpp  ode_utils.hpp  sfem_fvm_utils.hpp
src/discretization/ode/: erk.cpp  erk.hpp  sfem_ode.hpp
src/io/: CMakeLists.txt  gmsh.cpp  gmsh.hpp  io_field.cpp  io_field.hpp  native.cpp  native.hpp  sfem_io.hpp  vtk.cpp  vtk.hpp
src/io/gmsh/: gmsh.cpp  gmsh.hpp  sfem_gmsh.hpp  utils.cpp  utils.hpp
src/io/native/: CMakeLists.txt  native.cpp  native.hpp  sfem_io_native.hpp
src/io/vtk/: CMakeLists.txt  legacy.cpp  legacy.hpp  sfem_vtk.hpp  utils.cpp  utils.hpp  vtk.cpp  vtk.hpp  xml.cpp  xml.hpp  xml_utils.cpp  xml_utils.hpp
src/la/: CMakeLists.txt  backend.hpp  sfem_la.hpp  utils.hpp
src/la/native/: CMakeLists.txt  dense_matrix.cpp  dense_matrix.hpp  dense_matrix_utils.cpp  dense_matrix_utils.hpp  linear_system.hpp  setval_utils.cpp  setval_utils.hpp  sfem_la_native.hpp  sparse_matrix.cpp  sparse_matrix.hpp  sparsity.cpp  sparsity.hpp  utils.hpp  vector.cpp  vector.hpp
src/la/native/linear_solvers/: CMakeLists.txt  cg.cpp  cg.hpp  gmres.cpp  gmres.hpp  linear_solver.cpp  linear_solver.hpp  linear_solver_factory.cpp  linear_solver_factory.hpp  sfem_linear_solvers.hpp
src/la/petsc/: CMakeLists.txt  petsc.cpp  petsc.hpp  petsc_ksp.cpp  petsc_ksp.hpp  petsc_linear_system.cpp  petsc_linear_system.hpp  petsc_mat.cpp  petsc_mat.hpp  petsc_vec.cpp  petsc_vec.hpp  sfem_petsc.hpp
src/la/slepc/: CMakeLists.txt  sfem_slepc.hpp  slepc.cpp  slepc_eps.cpp  slepc_eps.hpp
src/mesh/: CMakeLists.txt  cell.cpp  cell.hpp  mesh.cpp  mesh.hpp  partition.cpp  partition.hpp  region.cpp  region.hpp  sfem_mesh.hpp  topology.cpp  topology.hpp
src/mesh/utils/: CMakeLists.txt  edge_utils.cpp  edge_utils.hpp  face_utils.cpp  face_utils.hpp  geo_utils.cpp  geo_utils.hpp  loop_utils.hpp  sfem_mesh_utils.hpp
src/sfem/: CMakeLists.txt  sfem.hpp
src/sfem/base/: application.cpp  application.hpp  config.hpp  error.hpp  init.cpp  init.hpp  logging.cpp  logging.hpp  sfem_base.hpp  timer.hpp
src/sfem/discretization/: CMakeLists.txt  sfem_discretization.hpp
src/sfem/discretization/fem/: CMakeLists.txt  sfem_fem.hpp
src/sfem/discretization/fvm/: CMakeLists.txt  sfem_fvm.hpp
src/sfem/discretization/ode/: CMakeLists.txt  erk.cpp  erk.hpp  sfem_ode.hpp
src/sfem/geo/: sfem_geo.hpp  utils.cpp  utils.hpp  vec3.hpp
src/sfem/graph/: connectivity.cpp  partition.cpp  partition.hpp  sfem_graph.hpp
src/sfem/io/: io_field.cpp  io_field.hpp  sfem_io.hpp
src/sfem/io/gmsh/: CMakeLists.txt  gmsh.cpp  gmsh.hpp  sfem_gmsh.hpp  utils.hpp
src/sfem/io/native/: native.cpp  native.hpp  sfem_io_native.hpp
src/sfem/io/vtk/: legacy.cpp  legacy.hpp  sfem_vtk.hpp  utils.cpp  utils.hpp  vtk.cpp  vtk.hpp  xml.cpp  xml.hpp
src/sfem/la/: sfem_la.hpp
src/sfem/la/native/: dense_matrix.cpp  dense_matrix.hpp  dense_matrix_utils.cpp  dense_matrix_utils.hpp  linear_system.cpp  linear_system.hpp  setval_utils.cpp  setval_utils.hpp  sfem_la_native.hpp  sparse_matrix.cpp  sparse_matrix.hpp  sparsity.cpp  sparsity.hpp  vector.cpp  vector.hpp
src/sfem/la/petsc/: petsc.cpp  petsc.hpp  petsc_ksp.cpp  petsc_ksp.hpp  petsc_linear_system.cpp  petsc_linear_system.hpp  petsc_mat.cpp  petsc_mat.hpp  petsc_vec.cpp  petsc_vec.hpp  sfem_petsc.hpp
src/sfem/mesh/: cell.hpp  mesh.cpp  mesh.hpp  partition.cpp  partition.hpp  region.cpp  sfem_mesh.hpp  topology.cpp  topology.hpp
src/sfem/parallel/: index_map.cpp  mpi.cpp  mpi.hpp  scatterer.hpp  sfem_parallel.hpp
(+219 files in other folders)
