#==============================================================================
add_subdirectory(native)
#==============================================================================
add_subdirectory(petsc)
#==============================================================================
add_subdirectory(slepc)